fix title clipping for es-ES

--- a/assets/css/headerstyle.css
+++ b/assets/css/headerstyle.css
@@ -77,6 +77,7 @@ body {
 .header__title-button {
   color: inherit;
   text-transform: none;
+  padding: 0 4px; /* Otherwise >14 char title clips; Spanish */
 }
 
 .subheader__title {
